--- a/PRJ/Project Outputs for ANE_0002_02AA/Design Rule Check - ANE_0002_02AA_0000.html
+++ b/PRJ/Project Outputs for ANE_0002_02AA/Design Rule Check - ANE_0002_02AA_0000.html
@@ -230,17 +230,17 @@
 <tr class="front_matter">
 <td class="front_matter_column1">Date</td>
 <td class="front_matter_column2">:</td>
-<td class="front_matter_column3">08.10.2015</td>
+<td class="front_matter_column3">11.10.2015</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Time</td>
 <td class="front_matter_column2">:</td>
-<td class="front_matter_column3">22:02:06</td>
+<td class="front_matter_column3">23:47:24</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Elapsed Time</td>
 <td class="front_matter_column2">:</td>
-<td class="front_matter_column3">00:00:01</td>
+<td class="front_matter_column3">00:00:02</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Filename</td>
@@ -262,7 +262,7 @@
 </table>
 </td>
 </table>
-<hr><a name="IDD0XGKDFBPVL4MYCNGPVGSQ0D4BF5BHRI4T50NUYU2WYYLME3KHM"><h2>Summary</h2></a><table>
+<hr><a name="IDN1BC35IAQ4Y4EY5AXMU0UFMYRLULS2EMO5EMB2NXBHA0042XWUSI"><h2>Summary</h2></a><table>
 <tr>
 <th class="column1">Warnings</th>
 <th class="column2">Count</th>
@@ -277,91 +277,95 @@
 <th class="column2">Count</th>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDNR0ALUDMDXNPGPI1MNW4DWDA5IC4YQ5SXHSWS1JXSWKIBZUFLJLL">Power Plane Connect Rule(Direct Connect )(Expansion=0.508mm) (Conductor Width=0.254mm) (Air Gap=0.254mm) (Entries=4) (IsVia)</a></td>
+<td class="column1"><a href="#IDGZ0YFCIPPQRIHJE3TITFXWVHPBSNU4KLTB1GT4EUWXSY1GAEBIHG">Power Plane Connect Rule(Direct Connect )(Expansion=0.508mm) (Conductor Width=0.254mm) (Air Gap=0.254mm) (Entries=4) (IsVia)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDLCYFQKLLVDRPFJWKWRMJQUOANLMLWERCHCNHYEFXSQYDEB3EFLJE">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
+<td class="column1"><a href="#ID4ASLM2CKS30PJPV444VHIBKJVKRVXKTWX3ZHWGIZKS2KUVDKWK4N">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#ID2H1PPQKL3HKEC5CCB4FH2ULIVK5DMWSP4CTZSHDRBAVU2IKKOR5I">Un-Routed Net Constraint ( (All) )</a></td>
+<td class="column1"><a href="#ID3S25UYV0NYAXF5WSKNYIZ0A30KHUA4SWGX3OR0HLESHBXEJDIX2B">Un-Routed Net Constraint ( (All) )</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDHHVLUTJWQLVTONXKIG1OBOF3IC3BCWR2OEKSM4FXSICORK31R5CD">Clearance Constraint (Gap=0.3mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDAM2IE4ZKKWDDPB4L4O52FFBEQFUNMKXE5OK3KPM4BWOMDYE0QGRG">Clearance Constraint (Gap=0.3mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDFHBRWXLP25D4CRHX4G4VUNYFN2BDRXMAF4VE3CRLJPFD5VMFXM">Power Plane Connect Rule(Relief Connect )(Expansion=0.4mm) (Conductor Width=0.4mm) (Air Gap=0.4mm) (Entries=4) (All)</a></td>
+<td class="column1"><a href="#IDL4DTIBWDFCACM2SUO2WJSR2OXILP3UUXV4DBSL1MDDZXCKSDYTP">Power Plane Connect Rule(Relief Connect )(Expansion=0.4mm) (Conductor Width=0.4mm) (Air Gap=0.4mm) (Entries=4) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDVWVCZXIVKZ0IGE2JSJ33124BTJYKZQXEVGAOSMGLHPZ22N0E5XTC">Width Constraint (Min=0.2mm) (Max=2mm) (Preferred=0.3mm) (All)</a></td>
+<td class="column1"><a href="#ID35GMYNAOMT4YHFSBPMT3OSTOIOD2XHXWMG1LE0O0UBDHUPYL0LMC">Width Constraint (Min=0.2mm) (Max=2mm) (Preferred=0.3mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#ID3MOLA3KDHBMYNUFHLZCJXXNU3MWO3J44XKXRIBELJ52REONDPPKO">Routing Via (MinHoleWidth=0.2mm) (MaxHoleWidth=0.7mm) (PreferredHoleWidth=0.3mm) (MinWidth=0.5mm) (MaxWidth=1.2mm) (PreferedWidth=0.7mm) (All)</a></td>
+<td class="column1"><a href="#IDZFMIYZU54NHHGZUHVPXD3ZIL3D4UGULJKUBPPLGL34JRBVVAGYDP">Routing Via (MinHoleWidth=0.2mm) (MaxHoleWidth=0.7mm) (PreferredHoleWidth=0.3mm) (MinWidth=0.5mm) (MaxWidth=1.2mm) (PreferedWidth=0.7mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDNCPAO2OWVWXKLRSL3NPTXWTNKBDBMTJYDQJXCOL32LO0LODJLCRD">Component Clearance Constraint ( Horizontal Gap = 0.1mm, Vertical Gap = Infinite ) (Disabled)(All),(All) </a></td>
+<td class="column1"><a href="#IDMXVBEU5PNFIVM0JVK40PDOXPCPDIAZCFB5IYAHGT503352F3JIXF">Component Clearance Constraint ( Horizontal Gap = 0.1mm, Vertical Gap = Infinite ) (Disabled)(All),(All) </a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDI4B1DPHB2R4MLRI0Y3PBTGKCFGFHKI42SS2SMLYUIBHK51SUCUO">Height Constraint (Min=0mm) (Max=25.4mm) (Prefered=12.7mm) (Disabled)(All)</a></td>
+<td class="column1"><a href="#IDIVNPG1PNDUABCAEOKK3OQASFTO4U5UQHJIBGCNINRY05TMT2QVC">Height Constraint (Min=0mm) (Max=25.4mm) (Prefered=12.7mm) (Disabled)(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDGX3F34MQZOURHOZIBQXGWTJKCDU2VUZA2ZUJZ1NHMRAXFSJU3L5N">Hole Size Constraint (Min=0.025mm) (Max=3.2mm) (All)</a></td>
+<td class="column1"><a href="#IDHZC24K0WJCFFMIJSOKKPU4AZP4TWS5J2UT332ONUB0V4VWGN3RC">Hole Size Constraint (Min=0.025mm) (Max=3.2mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDHG0QVB3ZFRWKBP11T0F0PYRUTMRFGYHF2H0PDGCCN1Z2MGJITTJE">Differential Pairs Uncoupled Length using the Gap Constraints (Min=0.2mm) (Max=0.2mm) (Prefered=0.2mm)  and Width Constraints (Min=0.2mm) (Max=0.2mm) (Prefered=0.2mm) (Disabled)(All)</a></td>
+<td class="column1"><a href="#IDIGRZEJV5N1COBO5K1AKA0LODZHOKTMVXTZ2NPKSXAKMGBT1IULN">Differential Pairs Uncoupled Length using the Gap Constraints (Min=0.2mm) (Max=0.2mm) (Prefered=0.2mm)  and Width Constraints (Min=0.2mm) (Max=0.2mm) (Prefered=0.2mm) (Disabled)(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDRAQMTSPNP3AYCGNAQDB1NB3WOIZAQZJLQ5JGJGEL5NKQNNMDLFCL">Hole To Hole Clearance (Gap=0.2mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDNKTFGKUWXPUYMKEI2KH1LA0XKC1DSG23ZPF3JJNQIPNHUOXYGCV">Hole To Hole Clearance (Gap=0.2mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDVLKXJAEB33OYHB0OC0FC13A5LBWGEKQED3OAO2EEZX23CUD4GOYD">Minimum Solder Mask Sliver (Gap=0.1mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDK3ZGRLTTVBVMK0MDXJS034FSKPIBCU0SF2XVUZMSYLWZRNTR2EX">Minimum Solder Mask Sliver (Gap=0.1mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDBMERHBYDZVXVOFVQA311X3Z0YG04AU5E2GEXJ0NA435KFVJVPHF">Silk To Solder Mask (Clearance=0.05mm) (IsPad),(All)</a></td>
+<td class="column1"><a href="#ID4NTFUCPSN2KLJEDQVRO4XJ3LI2FQ1B4V34ME1FXZUYLIDKPWOKE">Silk To Solder Mask (Clearance=0.05mm) (IsPad),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDOX4GX0EJFQSDOWUQMXIDO4BDEF05ID2G3X5FDNPJLUA0VSIX1FWO">Silk to Silk (Clearance=0.2mm) (All),(All)</a></td>
+<td class="column1"><a href="#ID4DSPATPANMEKLOEO4TZ5HOZDDILVLADGEWGP3LGQQWBWM2NMCASL">Silk to Silk (Clearance=0.2mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDJDDJYDFSGOJQH2Y1VEXMLRASDPT441BWCCCB2YKFSIIXRV3D2AMC">Silk primitive without silk layer</a></td>
+<td class="column1"><a href="#IDRMQI1ZBKY54EBIPUHQOOOX2XGO53M4DZEVEPU5CUPB2Z0HWYF3EC">Silk primitive without silk layer</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDCD2TAV1GNWR2CP3RYHQHBPCKJMGCMI4XPZUE1EJXSL0XWYA1RNG">Net Antennae (Tolerance=0mm) (All)</a></td>
+<td class="column1"><a href="#ID0YLI3PZPXZTSOW4X0KG35LLE0JEAKL3K432V4GJO4RA00PNRLYNF">Net Antennae (Tolerance=0mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#ID4A5DJDB12A4GFQQ42YL33ZGK4CRBTIJQ5ZMBBDIBQOOLISH4COCB">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
+<td class="column1"><a href="#IDJJ05IQCMBEDEDRUBEHLA3Z5ZKN2NDJLUH0SJ41CVMPNXY2BLK53J">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDN0CI1KWNV13OLMHS4C12EIWA2KMCWDOONM4BHCO3WSNZN1NUPFWH">Minimum Annular Ring (Minimum=0.1mm) (All)</a></td>
+<td class="column1"><a href="#ID3UHFSBXFG2UFKI32XYQ52312RKFH4VL2GKPA5XPXTESFVMUWUWRO">Minimum Annular Ring (Minimum=0.1mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDWUWD212MJMSAPY0VQSEYUOA4SE4AIG15OQZL3TBFAV0LMQVXPBB">Clearance Constraint (Gap=0.4mm) (InNet('CHASSIS1') OR InNet('CHASSIS2') OR InNet('CHASSIS3') OR InNet('CHASSIS4') OR InNet('CHASSIS5') OR InNet('CHASSIS6')),(All)</a></td>
+<td class="column1"><a href="#IDRMJZWX4SUMG1JWISJIJMXFBHUFTC1ZRQWWAUXMEMXBBK4C0ZZZMI">Clearance Constraint (Gap=0.4mm) (InNet('CHASSIS1') OR InNet('CHASSIS2') OR InNet('CHASSIS3') OR InNet('CHASSIS4') OR InNet('CHASSIS5') OR InNet('CHASSIS6')),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDREOYMNQACLWBCPWRDSQWLUEOWJR3V420F11W0X0U0ZIF5VUSY0D">Clearance Constraint (Gap=0.4mm) (IsCopperRegion),(All)</a></td>
+<td class="column1"><a href="#IDGSXUWQT4NGUCKAF5XB05SFQ1ZNMFP1OLYLXDLQCONXZL4UGS30XB">Clearance Constraint (Gap=0.3mm) (IsCopperRegion),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#ID2YRGZN0U0QLUF4Y35KKY5S3HBGNCNSAWUE43YAPUHSSNR4QOAOCB">Clearance Constraint (Gap=0.2mm) (HasFootprint('TSOP65P640X120-16N-1')),(All)</a></td>
+<td class="column1"><a href="#ID5PBU3MZSMMBZE3ZPX4YXVIQUUHLRQNRAZAUN4CIJAK5WSR11CDJO">Clearance Constraint (Gap=0.2mm) (HasFootprint('TSOP65P640X120-16N-1') OR HasFootprint('TQFP80P900X900X160-32N')),(All)</a></td>
+<td class="column2">0</td>
+</tr>
+<tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
+<td class="column1"><a href="#IDF42VE42MXBTMP2DFI2IRM2SXJG4R1UIDTQ2PLVGOCXPLUPWGTWAG">Clearance Constraint (Gap=0.5mm) (AsMM(PadXSize_AllLayers) &gt; 3),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr>
